# ai-contexters

./: .gitignore  .semgrepignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE  Makefile  README.md  SECURITY.md  install.sh  vetcoders-suite-showcase.html
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.vibecrafted/: plans  reports
docs/: AICX_MCP_PRODUCT_PACK_2026-03-23.md  ARCHITECTURE.md  COMMANDS.md  DISTILLATION.md  REDACTION.md  RELEASES.md  STORE_LAYOUT.md  STORE_REPO_CENTRIC_SNAPSHOT_2026-03-21.md  vetcoders-suite-showcase.html
docs/internal/: AICX_FRAMING_REPORT.md
docs/plans/: 2026-01-31-simplified-cli-and-store.md
examples/.ai-context/local/: meta.json
examples/.ai-context/local/context/: 20260203_135933_loct_for_ai.md
examples/.ai-context/share/: timeline.md
scripts/: setup.sh
skills/: README.md
skills/ai-contexters/: SKILL.md
skills/ai-contexters/references/: architecture.md  commands.md
skills/bravesearch/: SKILL.md  brave_search.py
skills/docs/: index.html
skills/loctree/: SKILL.md
skills/loctree/references/: commands.md
skills/vetcoders-dou/: SKILL.md
skills/vetcoders-followup/: SKILL.md
skills/vetcoders-hydrate/: SKILL.md
skills/vetcoders-implement/: SKILL.md
skills/vetcoders-init/: SKILL.md
skills/vetcoders-marbles/: SKILL.md
skills/vetcoders-ship/: SKILL.md
skills/vetcoders-spawn/: SKILL.md
skills/vetcoders-subagents/: SKILL.md
skills/vetcoders-workflow/: SKILL.md
skills/vetcoders-workflow/references/: phase-examine.md  phase-implement.md  phase-research.md
skills/vetcoders-workflow/scripts/: pipeline-init.sh
src/: chunker.rs  dashboard.rs  dashboard_server.rs  frontmatter.rs  index_test.rs  init.rs  intents.rs  lib.rs  main.rs  mcp.rs  memex.rs  output.rs  rank.rs  redact.rs  reports_extractor.rs  sanitize.rs  segmentation.rs  sources.rs  state.rs  steer_index.rs  store.rs  types.rs
src/.loctree/HEAD@0463a28/: snapshot.json
src/.loctree/feat_stats-and-grep@0847719/: snapshot.json
src/.loctree/feat_stats-and-grep@6da61e6/: snapshot.json
src/.loctree/feat_stats-and-grep@7807f23/: snapshot.json
tests/: frame_kind_contract.rs  legacy_codex_format_test.rs  runtime_cli_store_contract.rs  runtime_reports_extractor.rs
tests/fixtures/frame_kind/: claude_session.jsonl  codex_session.jsonl  gemini_antigravity_conversation.json  gemini_session.json
tools/: changelog_close.py  version_bump.py
tools/githooks/: pre-push
