[package]
name = "ai-contexters"
version = "0.2.5"
edition = "2024"
description = "Extract timeline and memory from AI agent sessions (Claude Code, Codex, Gemini)"
authors = ["Maciej Gad <void@div0.space>", "Monika Szymanska <hello@vetcoders.io>"]
license = "MIT"
repository = "https://github.com/VetCoders/ai-contexters"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "net"] }

[dev-dependencies]
filetime = "0.2"

[[bin]]
name = "ai-contexters"
path = "src/main.rs"

[profile.release]
lto = true
strip = true
