[package]
name = "ai-contexters"
version = "0.5.6"
edition = "2024"
rust-version = "1.85"
description = "CLI + MCP server for extracting, searching, and browsing AI agent session context (Claude Code, Codex, Gemini)"
authors = ["Maciej Gad <void@div0.space>", "Monika Szymanska <hello@vetcoders.io>"]
license = "MIT"
repository = "https://github.com/VetCoders/ai-contexters"
homepage = "https://github.com/VetCoders/ai-contexters"
documentation = "https://docs.rs/ai-contexters"
readme = "README.md"
keywords = ["ai", "context", "timeline", "claude", "codex"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["*.html", "*.patch", "*.orig", ".ai-agents/", ".ai-context/", "scripts/", "skills/"]
autobins = false
default-run = "aicx"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "net", "signal"] }
rmcp = { version = "1.2", features = ["server", "schemars", "transport-io", "transport-streamable-http-server", "transport-streamable-http-server-session"] }
libc = "0.2.183"
# Remote integration boundary: consume the published crate instead of the local workspace checkout.
rmcp-memex = { version = "0.4.1", default-features = false }

[dev-dependencies]
filetime = "0.2"

[[bin]]
name = "aicx"
path = "src/main.rs"

[[bin]]
name = "aicx-mcp"
path = "src/bin/aicx_mcp.rs"

[profile.release]
lto = true
strip = true
